--- a/email4.html
+++ b/email4.html
@@ -47,7 +47,7 @@
                     <td colspan="2" style="padding-left: 40px; padding-right: 40px;">
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -62,7 +62,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -77,7 +77,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -92,7 +92,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -107,7 +107,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -122,7 +122,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -137,7 +137,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -152,7 +152,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -167,7 +167,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -182,7 +182,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -197,7 +197,7 @@
                         </div>
                         <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -212,7 +212,7 @@
                         </div>
                         <div style="padding-bottom: 80px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="#" style="text-decoration: none; color: black;">
-                                <img src="images/image_shoes.png" alt="Tênis da Nike">
+                                <img src="https://servidor-estaticos.vercel.app/produto.png" alt="Tênis da Nike">
                                 <div style="font-family: sans-serif; font-size: 12px;">
                                     <h3 style="margin: 0px;">Tênis Nike</h3>
                                     <span style="color: #c1c1c1; text-decoration: line-through;">
@@ -231,7 +231,7 @@
                     <tr style="background-color: #1c54a8;">
                         <td colspan="2" style="padding: 24px 0px; text-align: center;">
                             <a href="http://ebacshoes.com.br" target="_blank">
-                                <img src="images/ebac_shoes_site.png" alt="EBACSHOES.COM.BR">
+                                <img src="https://servidor-estaticos.vercel.app/ebac_shoes_site.png" alt="EBACSHOES.COM.BR">
                             </a>
                         </td>
                     </tr>
