--- a/email3.html
+++ b/email3.html
@@ -14,7 +14,7 @@
                         Recebemos seu pedido
                     </th>
                     <th style="padding-top: 24px; padding-bottom: 24px;">
-                        <img src="images/ebac_shoes.png" alt="EBAC SHOES">
+                        <img src="https://servidor-estaticos.vercel.app/EBAC_SHOES.png" alt="EBAC SHOES">
                     </th>
                 </tr>
             </thead>
@@ -75,7 +75,7 @@
                     <tr style="background-color: #1c54a8;">
                         <td colspan="2" style="padding: 24px 0px; text-align: center;">
                             <a href="http://ebacshoes.com.br" target="_blank">
-                                <img src="images/ebac_shoes_site.png" alt="EBACSHOES.COM.BR">
+                                <img src="https://servidor-estaticos.vercel.app/ebac_shoes_site.png" alt="EBACSHOES.COM.BR">
                             </a>
                         </td>
                     </tr>
