Modifiquei a imagem do e-mail 4

--- a/email4.html
+++ b/email4.html
@@ -14,7 +14,7 @@
                         Promoções da semana
                     </th>
                     <th style="padding-top: 24px; padding-bottom: 24px;">
-                        <img src="images/ebac_shoes.png" alt="EBAC SHOES">
+                        <img src="https://servidor-estaticos.vercel.app/EBAC_SHOES.png" alt="EBAC SHOES">
                     </th>
                 </tr>
             </thead>
